2013-07-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	include/functions_agents.php
	include/functions_modules.php
	include/functions_reporting.php
	include/constants.php
	operation/agentes/status_monitor.php
	operation/agentes/estado_agente.php
	operation/agentes/estado_monitores.php
	mobile/operation/agents.php
	mobile/operation/modules.php
	godmode/agentes/module_manager.php: Fix typo
	errors on few constants

	* operation/tree.php: Fix status check for 
	async not init modules to set the status in
	modules branch of tree view. Now it depends on
	the server

2013-07-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	include/functions_reporting.php
	operation/agentes/estado_monitores.php
	operation/search_agents.php: Fixed several errors on
	module status counts for bug #2338

2013-07-23  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.builder.php: Fix layout
	of alerts editor for bug 2273 

2013-07-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Few improvements
	of monitor item and top n item on the reports for
	bug #2331

	* godmode/users/user_list.php: Change the default 
	order of the user list to user id, and hide the
	useless first and second name from the view
	(this data is not editable)

2013-07-22  Ramon Novoa  <rnovoa@artica.es>

	* include/help/es/help_field_match_snmp.php,
	  include/help/ja/help_field_match_snmp.php,
	  include/help/en/help_field_match_snmp.php: Updated.

2013-07-19  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_network.php,
	  include/javascript/pandora_snmp_browser.js,
	  include/functions_snmp_browser.php,
	  operation/snmpconsole/snmp_browser.php: Added SNMP version support to
	  the SNMP browser.

2013-07-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php, include/functions_reports.php,
	include/functions_groups.php, include/functions_incidents.php: fixed